# Slicer_Read_Sequential_Data

./: CMakeLists.txt  README.md
ReadSequentialData/: CMakeLists.txt  ReadSequentialData.py
ReadSequentialData/Resources/UI/: ReadSequentialData.ui  ReadSequentialData_ui.py
others/: CurvedPlanarReformatting.py
